--- a/MongoDbMarket.WebUI/MongoDbMarket.WebUI.csproj
+++ b/MongoDbMarket.WebUI/MongoDbMarket.WebUI.csproj
@@ -224,14 +224,16 @@
     <Content Include="Global.asax" />
     <Content Include="Image\bcg2.jpg" />
     <Content Include="Image\iconmonstr-plus-4-240.png" />
-    <Content Include="Image\items\item1.jpg" />
-    <Content Include="Image\items\item2.jpg" />
-    <Content Include="Image\items\item3.jpg" />
-    <Content Include="Image\items\item4.jpg" />
-    <Content Include="Image\items\item5.jpg" />
-    <Content Include="Image\items\item6.jpg" />
-    <Content Include="Image\items\item7.jpg" />
-    <Content Include="Image\items\item8.jpg" />
+    <Content Include="Image\items\work1.jpg" />
+    <Content Include="Image\items\work10.jpg" />
+    <Content Include="Image\items\work2.jpg" />
+    <Content Include="Image\items\work3.jpg" />
+    <Content Include="Image\items\work4.jpg" />
+    <Content Include="Image\items\work5.jpg" />
+    <Content Include="Image\items\work6.jpg" />
+    <Content Include="Image\items\work7.jpg" />
+    <Content Include="Image\items\work8.jpg" />
+    <Content Include="Image\items\work9.jpg" />
     <Content Include="Image\logo.jpg" />
     <Content Include="Image\social\iconmonstr-facebook-5-240.png" />
     <Content Include="Image\social\iconmonstr-instagram-5-240.png" />
@@ -267,7 +269,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Admin.cshtml" />
     <Content Include="Views\Home\Detail.cshtml" />
     <Content Include="Views\Home\Add.cshtml" />
     <Content Include="Views\Home\Edit.cshtml" />
